--- a/templates/myblog/base.html
+++ b/templates/myblog/base.html
@@ -1,27 +1,36 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css" />
-    <title>{% block title %}Derushev!{% endblock %}</title>
-</head>
+    <head>
+        <!-- Head -->
+        <link rel="stylesheet" href="{% static 'bower_components/lumx/dist/lumx.css' %}">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
 
-<body>
-    <div id="sidebar">
-        {% block sidebar %}
-        <ul>
-            <li><a href="/">Обо мне</a></li>
-            <li><a href="/">Резюме</a></li>
-            <li><a href="/">Блог</a></li>
-        </ul>
-        {% endblock %}
-    </div>
+        <link rel="stylesheet" href="style.css" />
+        <title>{% block title %}Derushev!{% endblock %}</title>
+    </head>
 
-    <div id="content">
-        {% block content %}{% endblock %}
-    </div>
-</body>
+    <body>
+        <div id="sidebar">
+            {% block sidebar %}
+            <ul>
+                <li><a href="/">Обо мне</a></li>
+                <li><a href="/">Резюме</a></li>
+                <li><a href="/">Блог</a></li>
+            </ul>
+            {% endblock %}
+        </div>
+
+        <div id="content">
+            {% block content %}{% endblock %}
+        </div>
+
+    <!-- Before body closing tag -->
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/velocity/velocity.js"></script>
+        <script src="bower_components/moment/min/moment-with-locales.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/lumx/dist/lumx.js"></script>
+
+    </body>
 </html>
-<pre>
-    {% debug %}
-</pre>
