--- a/templates/myblog/base.html
+++ b/templates/myblog/base.html
@@ -4,33 +4,37 @@
     <head>
         <!-- Head -->
         <link rel="stylesheet" href="{% static 'bower_components/lumx/dist/lumx.css' %}">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 
-        <link rel="stylesheet" href="style.css" />
-        <title>{% block title %}Derushev!{% endblock %}</title>
+        <title>{% block title %}Hey, you{% endblock %}</title>
     </head>
 
-    <body>
-        <div id="sidebar">
-            {% block sidebar %}
-            <ul>
-                <li><a href="/">Обо мне</a></li>
-                <li><a href="/">Резюме</a></li>
-                <li><a href="/">Блог</a></li>
-            </ul>
+    <body ng-app="blog">
+        <div id="container">
+            {% block header %}
+                {% include 'myblog/blocks/header.html' %}
+            {% endblock %}
+
+            <div class="p+ bgc-light-gray-300">
+                {% block content %}{% endblock %}
+            </div>
+            {% block footer %}
+                <footer class="tc-white-1 p+ bgc-grey-800 footer text-center" flex-container="row">
+                    <div flex-item="12" flex-item-order="1">
+                        with love.
+                    </div>
+                </footer>
             {% endblock %}
         </div>
 
-        <div id="content">
-            {% block content %}{% endblock %}
-        </div>
 
     <!-- Before body closing tag -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/velocity/velocity.js"></script>
-        <script src="bower_components/moment/min/moment-with-locales.js"></script>
-        <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/lumx/dist/lumx.js"></script>
+        <script src="{% static 'bower_components/jquery/dist/jquery.js' %}"></script>
+        <script src="{% static 'bower_components/velocity/velocity.js' %}"></script>
+        <script src="{% static 'bower_components/moment/min/moment-with-locales.js' %}"></script>
+        <script src="{% static 'bower_components/angular/angular.js' %}"></script>
+        <script src="{% static 'bower_components/lumx/dist/lumx.js' %}"></script>
 
+        <script src="{% static 'main.js' %}"></script>
     </body>
 </html>
