--- a/templates/myblog/post_detail.html
+++ b/templates/myblog/post_detail.html
@@ -8,4 +8,7 @@
     <small>
         {{ post.ts }}
     </small>
+    {% load disqus_tags %}
+    {% disqus_show_comments %}
+    {% disqus_dev %}
 {% endblock %}
