--- a/templates/myblog/base.html
+++ b/templates/myblog/base.html
@@ -4,7 +4,7 @@
     <head>
         <!-- Head -->
         <link rel="stylesheet" href="{% static 'bower_components/lumx/dist/lumx.css' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'myblog/css/style.css' %}">
 
         <title>{% block title %}Hey, you{% endblock %}</title>
     </head>
@@ -35,6 +35,6 @@
         <script src="{% static 'bower_components/angular/angular.js' %}"></script>
         <script src="{% static 'bower_components/lumx/dist/lumx.js' %}"></script>
 
-        <script src="{% static 'main.js' %}"></script>
+        <script src="{% static 'myblog/js/main.js' %}"></script>
     </body>
 </html>
