--- a/templates/myblog/blocks/header.html
+++ b/templates/myblog/blocks/header.html
@@ -6,7 +6,7 @@
         <a href="mailto:derushev.alexey@gmail.com"><i class="icon icon--xl icon--orange icon--circled mdi mdi-gmail"></i></a>
     </div>
     <div flex-item="4" flex-item-order="2" class="text-center">
-        <h1>{Aleksey D}</h1>
+        <h1><a href="{% url 'index' %}">{Aleksey D}</a></h1>
     </div>
     <div flex-item="4" flex-item-order="3" class="text-center">
         <a href="{% url 'blog' %}" class="btn btn--xl btn--white btn--raised" lx-ripple>Blog</a>
