--- a/templates/myblog/blocks/header.html
+++ b/templates/myblog/blocks/header.html
@@ -1,6 +1,7 @@
 <div class="tc-white-1 p+ bgc-blue-300" flex-container="row">
     <div flex-item="4" flex-item-order="1">
-        <a target="_blank" href="https://github.com/hutsi"><i class="icon icon--xl icon--green icon--circled mdi mdi-github-box"></i></a>
+        <a target="_blank" href="https://github.com/hutsi"><i class="icon icon--xl icon--grey icon--circled mdi mdi-github-box"></i></a>
+        <a target="_blank" href="https://ru.linkedin.com/in/aleksey-derushev-1b7242a6"><i class="icon icon--xl icon--green icon--circled mdi mdi-linkedin-box"></i></a>
         <a target="_blank" href="http://vk.com/climbing_up_the_walls"><i class="icon icon--xl icon--red icon--circled mdi mdi-vk"></i></a>
         <a target="_blank" href="https://instagram.com/hudziamasuki/"><i class="icon icon--xl icon--purple icon--circled mdi mdi-instagram"></i></a>
         <a href="mailto:derushev.alexey@gmail.com"><i class="icon icon--xl icon--orange icon--circled mdi mdi-gmail"></i></a>
