--- a/templates/myblog/blocks/header.html
+++ b/templates/myblog/blocks/header.html
@@ -12,5 +12,6 @@
     <div flex-item="4" flex-item-order="3" class="text-center">
         <a href="{% url 'blog' %}" class="btn btn--xl btn--white btn--raised" lx-ripple>Blog</a>
         <a href="{% url 'resume' %}" class="btn btn--xl btn--white btn--raised" lx-ripple>Resume</a>
+        <a href="{% url 'portfolio' %}" class="btn btn--xl btn--white btn--raised" lx-ripple>Portfolio</a>
     </div>
 </div>
