--- a/templates/myblog/portfolio.html
+++ b/templates/myblog/portfolio.html
@@ -6,15 +6,17 @@
             <div class="card">
                 <div class="card__img card__img--top">
                     <img src="/images/placeholder/2-horizontal.jpg">
-                    <span class="fs-headline tc-white-1 display-block">Lorem Ipsum</span>
+                    <span class="fs-headline tc-white-1 display-block">Pediatrician clinic</span>
                 </div>
 
                 <div class="p+">
-                    <span class="fs-subhead tc-black-2 display-block">Lorem Ipsum</span>
+                    <strong class="fs-headline display-block">Pediatrician clinic</strong>
+                    <span class="fs-subhead tc-black-2 display-block">Perm</span>
 
                     <div class="paragraph fs-body-1">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tristique orci a lacinia malesuada.
+                            Website for Pediatrician clinic with CMS.
+                            <strong>Technoligies used:</strong> PHP 5.6, Yii2, MySQL, Redis
                         </p>
                     </div>
                 </div>
